# ohada-legal-assistant

./: README.md  app.py  pyproject.toml  rag_pipeline.py  requirements.txt
