[project]
name = "ohada-legal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.1",
    "huggingface-hub>=0.36.0",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
